--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>lesson 9</h1>
+    <script src="./src/calc.js"></script>
     <script src="./src/index.js"></script>
 </body>
 </html>
